# w2d-scaffold

./: .gitignore  CONTEXT.md  DECISIONS.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  pyproject.toml  requirements.txt  scaffold.py
.github/workflows/: ci.yml
templates/: DECISIONS.md
templates/_common/: .env.example.j2  .gitignore.j2  CONTEXT.md.j2  DECISIONS.md.j2  NEXT_STEPS.md.j2  README.md.j2  STRUCTURE.md.j2
templates/astro/: astro.config.mjs.j2  package.json.j2
templates/astro/src/: consts.ts.j2
templates/astro/src/layouts/: BaseLayout.astro.j2  ListLayout.astro.j2  PostLayout.astro.j2
templates/astro/src/pages/: index.astro.j2
templates/astro/src/styles/: global.css.j2
templates/data/: Makefile.j2  pyproject.toml.j2
templates/data/dbt/: dbt_project.yml.j2  profiles.yml.j2
templates/python/: .env.example.j2  pyproject.toml.j2
templates/python/src/PROJECT_NAME/: __init__.py.j2  main.py.j2
templates/python/tests/: test_main.py.j2
templates/rag/: main.py.j2  requirements.txt.j2
templates/rag/app/: api.py.j2  ingestion.py.j2  retrieval.py.j2
templates/wordpress-plugin/: .gitignore.j2  PROJECT_NAME.php.j2
templates/wordpress-plugin/assets/css/: main.css.j2
templates/wordpress-plugin/assets/js/: main.js.j2
templates/wordpress-plugin/includes/: class-PROJECT_SLUG.php.j2  helpers.php.j2
templates/wordpress-plugin/templates/: archive.php.j2
templates/wordpress-theme/: functions.php.j2  index.php.j2  style.css.j2
templates/wordpress-theme/templates/: base.twig.j2  index.twig.j2  single.twig.j2
tests/: test_scaffold.py
(+11 files in other folders)
